0. Сортировка [#10096] fix tests