@@ -10,40 +10,26 @@ import static org.assertj.core.api.ListAssert.assertThatList;
 class ItemDescByNameTest {
     @Test
     public void whenItemsDescByName() {
-        List<Item> actual = Arrays.asList(
-                new Item("c"),
-                new Item("b"),
-                new Item("a"),
-                new Item("e"),
-                new Item("d")
-        );
-        List<Item> expected = List.of(
-                new Item("e"),
-                new Item("d"),
-                new Item("c"),
-                new Item("b"),
-                new Item("a")
-        );
+        Item a = new Item("a");
+        Item b = new Item("b");
+        Item c = new Item("c");
+        Item d = new Item("d");
+        Item e = new Item("e");
+        List<Item> actual = Arrays.asList(c, b, a, e, d);
+        List<Item> expected = List.of(e, d, c, b, a);
         actual.sort(new ItemDescByName());
         assertThatList(actual).isEqualTo(expected);
     }
 
     @Test
     public void whenSortedItemsDescByName() {
-        List<Item> actual = Arrays.asList(
-                new Item("e"),
-                new Item("d"),
-                new Item("c"),
-                new Item("b"),
-                new Item("a")
-        );
-        List<Item> expected = List.of(
-                new Item("e"),
-                new Item("d"),
-                new Item("c"),
-                new Item("b"),
-                new Item("a")
-        );
+        Item a = new Item("a");
+        Item b = new Item("b");
+        Item c = new Item("c");
+        Item d = new Item("d");
+        Item e = new Item("e");
+        List<Item> actual = Arrays.asList(c, b, a, e, d);
+        List<Item> expected = List.of(e, d, c, b, a);
         actual.sort(new ItemDescByName());
         assertThatList(actual).isEqualTo(expected);
     }
